# ROS2_Tello

./: README.md  amendoim  kkkkkkkk  setup.py
install/: local_setup.sh  setup.sh
install/ros2_tello/lib/ros2_tello/: tello_controller  tello_modo  tello_ros  tello_sensors
install/ros2_tello/share/ros2_tello/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
results/: ground_truth.csv
ros2_tello/: package.xml  setup.cfg  setup.py
ros2_tello/config/: waypoints.json
ros2_tello/ros2_tello/: Tello_controler.py  Tello_sensors.py  Tello_test.py  tello_controller.py  tello_modo.py  tello_ros.py
