<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_tello</name>
  <version>0.0.1</version>
  <description>The ros2_tello package</description>
  <maintainer email="lacea@todo.todo">lacea</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependências de execução -->
  <exec_depend>launch</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- Ferramentas de construção -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependências para testes -->
  <test_depend>python3-pytest</test_depend>

  <!-- Define o tipo de build -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>